<resources>
    <string name="app_name">SmartCam</string>
    <string name="label_activity_preview_camera">Scanning text…</string>
    <string name="result_activity_title">Scan result</string>
    <string name="result_activity_subtitle">Edit the text below if necessary</string>
    <string name="tranlate_activity_title">Translate</string>
    <string name="tab_text_1">Cards</string>
    <string name="tab_text_2">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Allow SmartCam to take pictures and record video?</string>
    <string name="low_storage_error">Error x0: Low storage..</string>
    <string name="no_camera_permission">Error x1: No camera permissions..</string>
    <string name="prompt_translate">Translate</string>
    <string name="prompt_save_note">Save note</string>
    <string name="prompt_translate_from">From:</string>
    <string name="prompt_translate_to">To:</string>
    <string name="prompt_detect_lang">Detecting language..</string>
    <string name="prompt_spanish_lang">Spanish</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="button_scan">Capture</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="prompt_language_no_detected">Language no detected</string>
    <string name="prompt_pick_detected_languages">Pick detected languages</string>
    <string name="prompt_no_language">No language set</string>
    <string name="prompt_contact_name">Contact name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_mail">Mail</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_web_page">Web page</string>
    <string name="contentDescription">contentDescription</string>
    <string name="prompt_next">next</string>
    <string name="button_done">DONE</string>
    <string name="prompt_add_category">Add category</string>
    <string name="prompt_add_section">Add section</string>
    <string name="hint_section_name">Enter section name</string>
    <string name="hint_no_phone">No phone available</string>
</resources>
