<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/img_contact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:alpha=".6"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_account_box_black_24dp"
                android:tint="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/img_contact"
                android:hint="@string/prompt_contact_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_alignTop="@+id/textInput_phone"
                android:alpha=".6"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_phone_black_24dp"
                android:tint="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/img_phone"
                android:layout_below="@id/textInput_contact"
                android:hint="@string/prompt_phone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/img_mail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_alignTop="@+id/textInput_mail"
                android:alpha=".6"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_mail_outline_black_24dp"
                android:tint="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/img_mail"
                android:layout_below="@id/textInput_phone"
                android:hint="@string/prompt_mail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/img_address"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_alignTop="@+id/textInput_address"
                android:alpha=".6"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_location_on_black_24dp"
                android:tint="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/img_address"
                android:layout_below="@id/textInput_mail"
                android:hint="@string/prompt_location">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/img_web"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_alignTop="@+id/textInput_web"
                android:alpha=".6"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_public_black_24dp"
                android:tint="@color/colorPrimaryDark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/img_web"
                android:layout_below="@id/textInput_address"
                android:hint="@string/prompt_web_page">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditText_web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textWebEditText" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:text="@string/prompt_next"
        android:textColor="@color/colorAccent"/>

</LinearLayout>